Bug 12261 - Set FILE_ATTRIBUTE_DIRECTORY as necessary if the VFS module doesn't do it
Summary: Set FILE_ATTRIBUTE_DIRECTORY as necessary if the VFS module doesn't do it
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 12436
  Show dependency treegraph
 
Reported: 2016-09-14 10:52 UTC by Ralph Böhme
Modified: 2016-11-18 16:18 UTC (History)
3 users (show)

See Also:


Attachments
git-am fix for 4.5.next, 4.4.next. (1.69 KB, patch)
2016-09-22 19:09 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2016-09-14 10:52:30 UTC
Some VFS modules like GPFS will always return success from SMB_VFS_GET_DOS_ATTRIBUTES() but only set a subset of the attributes. It neither sets FILE_ATTRIBUTE_NORMAL nor FILE_ATTRIBUTE_DIRECTORY.

We already handle the case that the VFS stack returns with result==0 and then add the FILE_ATTRIBUTE_NORMAL, regardless of the type of the filesystem object.

Have patch, need bug number.
Comment 1 Jeremy Allison 2016-09-22 19:09:05 UTC
Created attachment 12505 [details]
git-am fix for 4.5.next, 4.4.next.
Comment 2 Ralph Böhme 2016-09-22 19:20:54 UTC
Reassigning to Karolin for inclusion in 4.4 and 4.5.
Comment 3 Karolin Seeger 2016-09-23 09:40:44 UTC
(In reply to Ralph Böhme from comment #2)
Pushed to autobuild-v4-{5,4}-test.
Comment 4 Karolin Seeger 2016-10-18 07:50:43 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!